# nix-templates

./: flake.nix
boilerplate/: flake.nix
rust/: Cargo.toml  flake.nix  rust-toolchain.toml
rust-bevy/: Cargo.toml  flake.nix  rust-toolchain.toml
rust-bevy/src/: main.rs
rust-cursive/: Cargo.toml  flake.nix
rust-cursive/src/: main.rs
rust-embedded/: Cargo.toml  build.rs  flake.nix  memory.x  rust-toolchain.toml
rust-embedded/.cargo/: config.toml
rust-embedded/src/: lib.rs  main.rs
rust-embedded/tests/: integration.rs
rust-iced/: Cargo.toml  flake.nix
rust-iced/src/: main.rs
rust-project/: flake.nix
rust-project/src/: main.rs
rust/src/: lib.rs
