[package]
# TODO Add project name here.
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[[bin]]
# TODO Add project name here.
name = "{{project-name}}"
harness = false

# Required for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.4", features = ["alloc"] }
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
alloc-cortex-m = "0.4.4"
# TODO: Add some HAL crate. Usually {{chip}}-hal.
{{hal-crate}} = ""

[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
